# LicenseLib

./: README.md  setup.cfg
.github/workflows/: publish.yml
licenselib/: github.py  pypi.py
src/: setup.cfg  setup.py
src/licenselib/: __init__.py  license.py  pypi.py  utils.py
