[metadata]
name = licenselib
version = 0.1.0
description = Library for fetching licenses and dependencies
long_description = file: ../README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: ../LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests